fix button  align

--- a/src/client/scss/vmware/components/content-blocks.scss
+++ b/src/client/scss/vmware/components/content-blocks.scss
@@ -1098,6 +1098,11 @@
       }
     }
   }
+  .content-block-left{
+    .cb-cta-link{
+      justify-content: flex-start;
+    }
+  }
 }
 
 .Featured-section {
